cmake_minimum_required(VERSION 3.10.2)

project(dependencies)

add_subdirectory(boost)
add_subdirectory(double_conversion)
add_subdirectory(glog)
add_subdirectory(fmt)
add_subdirectory(gflags)
add_subdirectory(libevent)
add_subdirectory(folly)
add_subdirectory(zstd)
add_subdirectory(sodium)
add_subdirectory(fizz)
add_subdirectory(wangle)
add_subdirectory(proxygen)
add_subdirectory(jsoncpp)
add_subdirectory(tinyxml2)
add_subdirectory(zlib)
add_subdirectory(openssl)
add_subdirectory(curl)
add_subdirectory(cares)
add_subdirectory(protobuf)
add_subdirectory(absl)
add_subdirectory(re2)
add_subdirectory(grpc)
add_subdirectory(rapidjson)
